# subtitle-shop-services

./: .gitignore  pyproject.toml  sample.py
download/: __init__.py  main.py
service/: download.py
subtitle/: __init__.py  main.py
transcribe/: __init__.py  main.py
translate/: __init__.py  main.py
utils/: algorithm.py  aws.py  srtUtils.py
