[tool.poetry]
name = "subtitle-shop"
version = "0.1.0"
description = ""
authors = ["Waldo Spek <waldospek@gmail.com>"]
readme = "README.md"
packages = [{include = "subtitle_shop"}]

[tool.poetry.dependencies]
python = "^3.8"
pytube = "^15.0.0"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
