[tool.poetry]
name = "subtitle-shop-services"
version = "0.1.0"
description = ""
authors = ["Waldo Spek <waldospek@gmail.com>"]
readme = "README.md"
packages = [{include = "subtitle_shop"}]

[tool.poetry.dependencies]
python = "^3.9"
pytube = "^15.0.0"
ffmpeg-python = "^0.2.0"
boto3 = "^1.34.29"
srt = "^3.5.3"
strsimpy = "^0.2.1"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
